--- a/styles/style.css
+++ b/styles/style.css
@@ -520,8 +520,8 @@ main > section.section-base {
 }
 
 main > section > .container {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 @media (max-width: 768px) {
